[gd_scene load_steps=2 format=3 uid="uid://bt3vkxdnk5thb"]

[ext_resource type="Script" path="res://Levels/test_world.gd" id="1_a7p8j"]

[node name="TestWorld" type="Node2D"]
script = ExtResource("1_a7p8j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HostJoin" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 191.0
offset_top = 113.0
offset_right = -191.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HostJoin"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HostJoin/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/HostJoin/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Host Screen"
horizontal_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/HostJoin/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/HostJoin/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="CanvasLayer/HostJoin/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to join"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://GameObjects/player_1.tscn", "res://GameObjects/player_1.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/HostJoin/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/HostJoin/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
